# sample-remote

./: aws-http-server.ts  aws-lambda-http-server.ts  client.py  pyproject.toml  remote_mcp_server.py  script_stateless.sh  scrpt_stateful.sh  server.py  server_auth.py  terminal_server.py
