[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.6.0",
    "mcp[cli]>=1.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.24.1",
    "python-dotenv>=1.0.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "fastapi>=0.115.13",
]
